# CBurgers_Codex

./: CMakeLists.txt  README.md  app.cpp  environment.yml
docs/: dashboard.html  index.html
docs/assets/checkpoints/: my_checkpoint_multistep.pt  my_checkpoint_onestep.pt
report/: changes_summary.tex  dashboard.html
